# Py_web_HW_10

./: .gitignore  README.md  pyproject.toml
mysite/my_quotes/: forms.py  models.py  urls.py  views.py
mysite/my_quotes/mongo_postgres_db/: migrate_mongo_to_postgres.py  models_postgres.py  update.py
mysite/my_quotes/templates/my_quotes/: add_quote.html  author.html  base.html  index.html  index_.html  index__.html  tag.html  tag_.html
mysite/mysite/: settings.py  urls.py
mysite/polls/: admin.py  models.py  urls.py  views.py
mysite/polls/mongo_postgres_db/: migrate_mongo_to_postgres.py
mysite/users/: forms.py
mysite/users/templates/users/: login.html  signup.html
