[tool.poetry]
name = "py-web-hw-10"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
mongoengine = "^0.26.0"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.5"
django-mysql = "^4.9.0"
sqlalchemy = "^2.0.4"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
